# repo

./: CHANGELOG.md  README.md  cmdline.go  cmdline_test.go  config.go  config.yaml  go.mod  go.sum  issues.go  issues_test.go  main.go  main_test.go  pyproject.toml  repo.go  repo_test.go  urlmaker.go
cmd/: repo.go
docs/: functions.md  toPython.md
src/repo_py/: __init__.py  cli.py  config.py  config.yaml  main.py  urlmaker.py
tests/: test_cli.py  test_integration_urlmaker.py  test_urlmaker.py
